Visually fixed a lot of the issues on mobile, and found out copy to clipboard on mobile is unexpectedly hard to implement, but I did it by hidden input field.

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-body {
+body, html {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -174,21 +175,38 @@ code {
 
 .popup {
     position: fixed;
+    z-index: 10;
     top: 20%;
     left: 20%;
+    right: 20%;
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.7);
     color: #fff;
     border-radius: 8px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.7);
     cursor: default;
-    font-size: 60%;
+    font-size: calc(4px + 2vmin);
     font-family: Verdana;
     user-select:none !important;
 }
 
-/*main page*/
+/* CSS for phones / smaller screens */
 @media (max-width: 1000px) {
+    .algorithm-box {
+        padding: 10px;
+    }
+
+    .box {
+        width: 12px;
+        height: 12px;
+    }
+
+    .popup {
+        font-size: calc(5px + 3vmin);
+        left: 10%;
+        right: 10%;
+    }
+
     .information-box {
         margin: 20px 10px;
         font-size: calc(4px + 2vmin);
@@ -223,12 +241,29 @@ code {
 }
 
 @media (max-width: 500px) {
+    .algorithm-box {
+        padding: 10px;
+    }
+
+    .box {
+        width: 12px;
+        height: 12px;
+    }
+
+    .popup {
+        font-size: calc(5px + 3vmin);
+        left: 10%;
+        right: 10%;
+        top: 10%;
+    }
+
     .information-box {
         margin: 20px 5px;
         font-size: calc(5px + 3vmin);
     }
 
     .about-box {
+        top: 90%;
         width: 30%;
         height: 30%;
         font-size: calc(3px + 2vmin);
